--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backend",
-  "proxy": "https://api.amaiie.lafuentedanel.com/",
+  "proxy": "https://api.amaiie.javiergonzalez.site/",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
